2022-07-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha03: Moon Sun Run';git push
	git tag -a 5.1.1-alpha03 -m '';git push --tags

	* Extending nco_fl_mv(), nco_fl_rm(), and nco_fl_cp() to handle directories

	* Use and verify nco_fl_ncz2psx() in nco_fl_mv()

	* Prevent MSVC build errors by searching in volatile not const strings

	* Fix invalid pointer references

	* Draft and test nco_fl_ncz2psx()...it fails

2022-07-14  Charlie Zender  <zender@uci.edu>

	* Finish and employ nco_fl_is_nczarr()

	* Prototype nco_fl_ncztopth(), fix compile issue for NCZarr with old netCDF

	* Call nc_inq_filter_avail() only if it exists and might be successful, quiet messages

2022-07-13  Charlie Zender  <zender@uci.edu>

	* Retrofit nco_fl_blocksize() and nco_fl_mv() to handle NCZarr file:// schema storage

	* NCO 5.1.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha02: Webb';git push
	git tag -a 5.1.1-alpha02 -m 'ncks: read/hyperslab/print NCZarr files';git push --tags

	* Add external data type NC_FORMATX_NCZARR

	* Remove "-D_BSD_SOURCE -D_POSIX_SOURCE" from gnu and icc in configure.ac

	* Treat NCZarr files with file:// scheme like DAP files so printing works

2022-07-12  Charlie Zender  <zender@uci.edu>

	* Call nco_cdc_lst_bld() only if an invoked filter was not found

	* Add stubs to let NCO examine files with NCZarr file:// schema

	* NCO 5.1.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha01: Bali';git push
	git tag -a 5.1.1-alpha01 -m 'Functionally identical to 5.1.0';git push --tags

	* Increase NCO_MIN_CNK_BLOSC from 1U to 4096U to prevent some Blosc errors

	* NCO 5.1.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.0: Rattlesnake';git push
	git tag -a 5.1.0 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Change E3SMU_ROOT from 1.6.0 to 1.7.0 in ncremap
