@@ -4,7 +4,9 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha03: Moon Sun Run';git push
 	git tag -a 5.1.1-alpha03 -m '';git push --tags
 
-	* Extending nco_fl_mv(), nco_fl_rm(), and nco_fl_cp() to handle directories
+	* Verify that file manipulation works for NCZarr I/O!
+
+	* Extend nco_fl_mv(), nco_fl_rm(), and nco_fl_cp() to handle directories
 
 	* Use and verify nco_fl_ncz2psx() in nco_fl_mv()
 
